--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="action_settings">Settings</string>
     <string name="agakhan">Agakhan</string>
     <string name="title_activity_outskirsts">Outskirsts</string>
+    <string name="home_page_button">Button</string>
 </resources>
